Fix form spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,8 +206,6 @@ nav a:hover {
     box-shadow: 0px 0px 40px 25px rgba(0, 0, 0, .3);
 }
 
-
-
 .jumbotron ::placeholder {
     color: white;
 }
@@ -406,6 +404,16 @@ a.see-more {
 
 form label {
     font-size: 1.4rem;
+}
+
+.form-first-name {
+    padding-left: 0;
+    padding-right: .75rem;
+}
+
+.form-last-name {
+    padding-left: .75rem;
+    padding-right: 0;
 }
 
 /* --------------------------------Profile.html */
